<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/insert_record_title"
        android:textSize="@dimen/text_size_title"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/insert_record_select_date_text"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etDescription"
        android:background="@drawable/edit_text_border"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:maxLines="8"
        android:padding="@dimen/margin_extra_small"
        android:hint="@string/insert_record_hint"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:gravity="start"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxl"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_xxl"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>