<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertExerciseActivity">

<TextView
    android:id="@+id/tvTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/insert_exercise_title"
    android:textSize="@dimen/text_size_title"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="@dimen/margin_standard"
    android:layout_marginStart="@dimen/margin_standard"
    android:layout_marginEnd="@dimen/margin_standard"
    />

    <EditText
        android:id="@+id/txtTitle"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:hint="@string/insert_exercise_title_hint"
        android:padding="@dimen/margin_extra_small"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:padding="@dimen/margin_extra_small"
        android:inputType="textMultiLine"
        android:gravity="left"
        android:maxLines="6"
        android:hint="@string/insert_exercise_description_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:background="@drawable/edit_text_border"/>

    <Spinner
        android:id="@+id/spnDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:maxHeight="150dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDifficulty" />

    <TextView
        android:id="@+id/tvPictureInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_exercise_no_picture"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spnDifficulty"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/btnUpload"
        android:textSize="@dimen/text_size_comment"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveExercise"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteExercise"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_standard"
        android:gravity="center"
        android:text="@string/btnDeleteExercise"
       android:textSize="@dimen/text_size_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnSaveExercise"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_standard"
        android:gravity="center"
        android:text="@string/btnSaveExercise"
        android:textSize="@dimen/text_size_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeletePicture"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/btnDeletePicture"
        android:textSize="@dimen/text_size_comment"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteExercise"
        app:layout_constraintEnd_toEndOf="parent"
       />





</android.support.constraint.ConstraintLayout>