<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:descendantFocusability="blocksDescendants"

    tools:context=".activities.ExerciseListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:descendantFocusability="blocksDescendants"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLevel"/>


    <TextView
        android:id="@+id/tvListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/recommended_exercise_list_title"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_small"
        tools:text="A te szinted jelenleg: középhaladó"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toTopOf="@+id/rvItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvListTitle"/>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_list_no_data"
        app:layout_constraintTop_toBottomOf="@+id/tvLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btnStronger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStronger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvItems"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_extra_large"/>


</android.support.constraint.ConstraintLayout>